--- a/templates/survey-result.html
+++ b/templates/survey-result.html
@@ -120,6 +120,7 @@
           <p class="recommended-dog-answer-6"></p>
           <p class="recommended-dog-answer-7"></p>
           <p class="recommended-dog-answer-8"></p>
+          <p class="recommended-dog-answer-9"></p>
         </div>
 
         <!-- Dog info + recommendation info -->
